ATL24 trajectory subsetter regression test support (#213)
* add ATL24 to configuration

* add atl24 json

* rm iniitl atl24 reference file test

* add atl24 reference file

* update env yaml

* update atl24 reference with 1.0.0 hashdiff

* update atl24 reference to 1.0.0

* update atl24 reference with proc param removed

* update changelog, version, atl24 test

* Update CHANGELOG.md

* atl-24: Reset Kernel-spec and set default harmony url to UAT

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* atl-24: adds labels to the harmony requests

---------

Co-authored-by: asteiker <amy.steiker@gmail.com>
Co-authored-by: Matt Savoie <matthew.savoie@colorado.edu>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "\n",
     "We test against ICESat2 v6 collections:\n",
-    "[ATL03](https://nsidc.org/data/atl03/versions/6), [ATL04](https://nsidc.org/data/atl04/versions/6), [ATL06](https://nsidc.org/data/atl06/versions/6), [ATL07](https://nsidc.org/data/atl07/versions/6), [ATL08](https://nsidc.org/data/atl08/versions/6), [ATL09](https://nsidc.org/data/atl09/versions/6), [ATL10](https://nsidc.org/data/atl10/versions/6), [ATL12](https://nsidc.org/data/atl12/versions/6) and [ATL13](https://nsidc.org/data/atl13/versions/6)\n",
+    "[ATL03](https://nsidc.org/data/atl03/versions/6), [ATL04](https://nsidc.org/data/atl04/versions/6), [ATL06](https://nsidc.org/data/atl06/versions/6), [ATL07](https://nsidc.org/data/atl07/versions/6), [ATL08](https://nsidc.org/data/atl08/versions/6), [ATL09](https://nsidc.org/data/atl09/versions/6), [ATL10](https://nsidc.org/data/atl10/versions/6), [ATL12](https://nsidc.org/data/atl12/versions/6), [ATL13](https://nsidc.org/data/atl13/versions/6), and [ATL24](https://nsidc.org/data/atl24/versions/1)\n",
     "\n",
     "\n",
     "## Prerequisites\n",
@@ -180,6 +180,11 @@
     "            'granule_id': 'G1261681705-NSIDC_CUAT',\n",
     "            'spatial': BBox(-89.0, 43.0, -75.0, 45.0),\n",
     "        },\n",
+    "        'ATL24': {\n",
+    "            'collection_concept_id': Collection(id='C1272933014-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1273188146-NSIDC_CUAT',\n",
+    "            'spatial': BBox(45.70313, -16.56216, 52.03125, -5.83577),\n",
+    "        },\n",
     "    },\n",
     "    'subset_by_temporal_range': {\n",
     "        'ATL04': {\n",
@@ -270,6 +275,11 @@
     "            'collection_concept_id': Collection(id='C2684928243-NSIDC_CPRD'),\n",
     "            'granule_id': 'G2720556827-NSIDC_CPRD',\n",
     "            'spatial': BBox(-89.0, 43.0, -75.0, 45.0),\n",
+    "        },\n",
+    "        'ATL24': {\n",
+    "            'collection_concept_id': Collection(id='C3433822507-NSIDC_CPRD'),\n",
+    "            'granule_id': 'G3454621622-NSIDC_CPRD',\n",
+    "            'spatial': BBox(45.70313, -16.56216, 52.03125, -5.83577),\n",
     "        },\n",
     "    },\n",
     "    'subset_by_temporal_range': {\n",
@@ -383,6 +393,7 @@
     "                collection=test_config['collection_concept_id'],\n",
     "                granule_id=[test_config['granule_id']],\n",
     "                spatial=test_config['spatial'],\n",
+    "                labels=[f'IS2-rtest-{shortname}', 'IS2-rtest'],\n",
     "            )\n",
     "            test_output = tmp_dir / Path(f'{shortname}_{test_name}.h5')\n",
     "            test_reference = Path(f'reference_files/{test_output.stem}_reference.json')\n",
@@ -442,6 +453,7 @@
     "                collection=test_config['collection_concept_id'],\n",
     "                granule_id=[test_config['granule_id']],\n",
     "                temporal=test_config['temporal'],\n",
+    "                labels=[f'IS2-rtest-{shortname}', 'IS2-rtest'],\n",
     "            )\n",
     "            test_output = tmp_dir / Path(f'{shortname}_{test_name}.h5')\n",
     "            test_reference = Path(f'reference_files/{test_output.stem}_reference.json')\n",
@@ -501,6 +513,7 @@
     "                collection=test_config['collection_concept_id'],\n",
     "                granule_id=[test_config['granule_id']],\n",
     "                shape=test_config['shape'],\n",
+    "                labels=[f'IS2-rtest-{shortname}', 'IS2-rtest'],\n",
     "            )\n",
     "            test_output = tmp_dir / Path(f'{shortname}_{test_name}.h5')\n",
     "            test_reference = Path(f'reference_files/{test_output.stem}_reference.json')\n",
