TRT-635: Add HGA regression tests for format.

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -80,6 +80,8 @@
    "source": [
     "from datetime import datetime\n",
     "\n",
+    "# TODO: Enable import when earthdata-hashdiff is included in environment.yml\n",
+    "# from earthdata_hashdiff import nc4_matches_reference_hash_file\n",
     "from harmony import BBox, Client, Collection, Environment, Request\n",
     "\n",
     "from test_utilities import (\n",
@@ -727,6 +729,121 @@
   },
   {
    "cell_type": "markdown",
+   "id": "abff1c5e",
+   "metadata": {},
+   "source": [
+    "### AVNIR test case 10:\n",
+    "\n",
+    "This test case combines a bounding box spatial subset across the Equator with a variable subset for bands 1 and 2. No format is specified, such that the default of a GeoTIFF output should be returned.\n",
+    "\n",
+    "The input `.zip` file contains 4 Image GeoTIFFs, one per band each representing a spectrum range. In this test, we are retrieving 2 output bands."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cc5b25b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if environment_information is not None:\n",
+    "    granule_id = get_test_granule_id(\n",
+    "        environment_information['env'], 'G1813212660-ASF', 'G1244144597-EEDTEST'\n",
+    "    )\n",
+    "\n",
+    "    avnir_directory_ten = 'avnir_test_ten'\n",
+    "\n",
+    "    avnir_request_ten = Request(\n",
+    "        collection=environment_information['avnir_collection'],\n",
+    "        spatial=BBox(-51.0, -0.05, -50.75, 0.25),\n",
+    "        variables=['Band1', 'Band2'],\n",
+    "        granule_id=granule_id,\n",
+    "    )\n",
+    "\n",
+    "    avnir_output_ten = make_request_and_download_result(\n",
+    "        harmony_client,\n",
+    "        avnir_request_ten,\n",
+    "        avnir_directory_ten,\n",
+    "    )\n",
+    "\n",
+    "    avnir_variable_base_ten = 'ALAV2A237403590-OORIRFU'\n",
+    "\n",
+    "    avnir_variables_ten = {\n",
+    "        f'IMG-01-{avnir_variable_base_ten}_000_band_1',\n",
+    "        f'IMG-02-{avnir_variable_base_ten}_000_band_1',\n",
+    "    }\n",
+    "\n",
+    "    expected_avnir_results_ten = {\n",
+    "        'authority': 'EPSG',\n",
+    "        'cs': 'Projected',\n",
+    "        'gcs': 'WGS 84',\n",
+    "        'gcs_epsg': '4326',\n",
+    "        'n_bands': 2,\n",
+    "        'proj_cs': 'WGS 84 / UTM zone 22N',\n",
+    "        'proj_epsg': '32622',\n",
+    "        'spatial_extent': [-0.05, 0.3, -50.99, -50.75],\n",
+    "        'variables': avnir_variables_ten,\n",
+    "        'width': 3410,\n",
+    "        'height': 3238,\n",
+    "    }\n",
+    "\n",
+    "    check_request_output(avnir_output_ten[0], expected_avnir_results_ten)\n",
+    "    clean_test_artefacts(avnir_directory_ten)\n",
+    "else:\n",
+    "    print('Skipping test: HGA regression tests not configured for this environment.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e3e7c61",
+   "metadata": {},
+   "source": [
+    "### AVNIR test case 11:\n",
+    "\n",
+    "This test case combines a bounding box spatial subset across the Equator with a variable subset for bands 1 and 2. A netCDF4 output format is specified.\n",
+    "\n",
+    "The input `.zip` file contains 4 Image GeoTIFFs, one per band each representing a spectrum range. In this test, we are retrieving 2 output bands.\n",
+    "\n",
+    "**Note: earthdata-hashdiff comparison is disabled because it requires Python 3.11, and that is incompatible with the version of GDAL used for GeoTIFF comparisons. This test is retained to ensure the request runs without error.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7371adc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if environment_information is not None:\n",
+    "    granule_id = get_test_granule_id(\n",
+    "        environment_information['env'], 'G1813212660-ASF', 'G1244144597-EEDTEST'\n",
+    "    )\n",
+    "\n",
+    "    avnir_directory_eleven = 'avnir_test_eleven'\n",
+    "\n",
+    "    avnir_request_eleven = Request(\n",
+    "        collection=environment_information['avnir_collection'],\n",
+    "        spatial=BBox(-51.0, -0.05, -50.75, 0.25),\n",
+    "        format='application/x-netcdf4',\n",
+    "        granule_id=granule_id,\n",
+    "    )\n",
+    "\n",
+    "    avnir_output_eleven = make_request_and_download_result(\n",
+    "        harmony_client,\n",
+    "        avnir_request_eleven,\n",
+    "        avnir_directory_eleven,\n",
+    "    )\n",
+    "\n",
+    "    # assert nc4_matches_reference_hash_file(\n",
+    "    #     avnir_output_eleven[0], 'reference_images/avnir_reference_eleven.nc4'\n",
+    "    # ), 'Test output does not match reference file, AVNIR netCDF4 output'\n",
+    "    clean_test_artefacts(avnir_directory_eleven)\n",
+    "else:\n",
+    "    print('Skipping test: HGA regression tests not configured for this environment.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ccc0d161",
    "metadata": {},
    "source": [
@@ -1296,6 +1413,169 @@
     "\n",
     "    check_request_output(uavsar_output_nine[0], expected_uavsar_results_nine)\n",
     "    clean_test_artefacts(uavsar_directory_nine)\n",
+    "else:\n",
+    "    print('Skipping test: HGA regression tests not configured for this environment.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70e7eb9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if environment_information is not None:\n",
+    "    granule_id = get_test_granule_id(\n",
+    "        environment_information['env'], 'G1422449017-ASF', 'G1244144733-EEDTEST'\n",
+    "    )\n",
+    "\n",
+    "    uavsar_directory_one = 'uavsar_test_one'\n",
+    "\n",
+    "    uavsar_request_one = Request(\n",
+    "        collection=environment_information['uavsar_collection'],\n",
+    "        spatial=BBox(-145.75, 64.0, -145.70, 64.1),\n",
+    "        variables=['Band1'],\n",
+    "        format='image/tiff',\n",
+    "        granule_id=granule_id,\n",
+    "    )\n",
+    "\n",
+    "    uavsar_output_one = make_request_and_download_result(\n",
+    "        harmony_client, uavsar_request_one, uavsar_directory_one\n",
+    "    )\n",
+    "\n",
+    "    uavsar_variable_base_one = 'djNEON_00101_17095_012_170910_L090_CX_01_pauli_Band1_subsetted__Band1__subsetted_band'\n",
+    "\n",
+    "    uavsar_variables_one = {f'{uavsar_variable_base_one}_1'}\n",
+    "\n",
+    "    expected_uavsar_results_one = {\n",
+    "        'authority': 'EPSG',\n",
+    "        'cs': 'Geographic',\n",
+    "        'gcs': 'WGS 84',\n",
+    "        'gcs_epsg': '4326',\n",
+    "        'n_bands': 1,\n",
+    "        'proj_cs': None,\n",
+    "        'proj_epsg': None,\n",
+    "        'reference_image': 'reference_images/uavsar_reference_one.tiff',\n",
+    "        'spatial_extent': [64.0, 64.1, -145.75, -145.7],\n",
+    "        'variables': uavsar_variables_one,\n",
+    "        'width': 450,\n",
+    "        'height': 1800,\n",
+    "    }\n",
+    "\n",
+    "    check_request_output(uavsar_output_one[0], expected_uavsar_results_one)\n",
+    "    clean_test_artefacts(uavsar_directory_one)\n",
+    "else:\n",
+    "    print('Skipping test: HGA regression tests not configured for this environment.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63b30cb0",
+   "metadata": {},
+   "source": [
+    "### UAVSAR test case 10:\n",
+    "\n",
+    "This test combines a bounding box spatial subset with a variable subset (`Band1`). No format is specified, so the output should be a GeoTIFF.\n",
+    "\n",
+    "Note - the test results for this test are the same as UAVSAR test-case 1, and so the reference file is reused from that test."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b4ed233",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if environment_information is not None:\n",
+    "    granule_id = get_test_granule_id(\n",
+    "        environment_information['env'], 'G1422449017-ASF', 'G1244144733-EEDTEST'\n",
+    "    )\n",
+    "\n",
+    "    uavsar_directory_ten = 'uavsar_test_ten'\n",
+    "\n",
+    "    uavsar_request_ten = Request(\n",
+    "        collection=environment_information['uavsar_collection'],\n",
+    "        spatial=BBox(-145.75, 64.0, -145.70, 64.1),\n",
+    "        variables=['Band1'],\n",
+    "        granule_id=granule_id,\n",
+    "    )\n",
+    "\n",
+    "    uavsar_output_ten = make_request_and_download_result(\n",
+    "        harmony_client,\n",
+    "        uavsar_request_ten,\n",
+    "        uavsar_directory_ten,\n",
+    "    )\n",
+    "\n",
+    "    uavsar_variable_base_ten = 'djNEON_00101_17095_012_170910_L090_CX_01_pauli_Band1_subsetted__Band1__subsetted_band'\n",
+    "\n",
+    "    uavsar_variables_ten = {f'{uavsar_variable_base_ten}_1'}\n",
+    "\n",
+    "    expected_uavsar_results_ten = {\n",
+    "        'authority': 'EPSG',\n",
+    "        'cs': 'Geographic',\n",
+    "        'gcs': 'WGS 84',\n",
+    "        'gcs_epsg': '4326',\n",
+    "        'n_bands': 1,\n",
+    "        'proj_cs': None,\n",
+    "        'proj_epsg': None,\n",
+    "        'reference_image': 'reference_images/uavsar_reference_one.tiff',\n",
+    "        'spatial_extent': [64.0, 64.1, -145.75, -145.7],\n",
+    "        'variables': uavsar_variables_ten,\n",
+    "        'width': 450,\n",
+    "        'height': 1800,\n",
+    "    }\n",
+    "\n",
+    "    check_request_output(uavsar_output_ten[0], expected_uavsar_results_ten)\n",
+    "    clean_test_artefacts(uavsar_directory_ten)\n",
+    "else:\n",
+    "    print('Skipping test: HGA regression tests not configured for this environment.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a49467aa",
+   "metadata": {},
+   "source": [
+    "### UAVSAR test case 11:\n",
+    "\n",
+    "This test case combines a bounding box spatial subset across the Equator with a variable subset for bands 1 and 2. A netCDF4 output format is specified.\n",
+    "\n",
+    "**Note: earthdata-hashdiff comparison is disabled because it requires Python 3.11, and that is incompatible with the version of GDAL used for GeoTIFF comparisons. This test is retained to ensure the request runs without error.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "684ab573",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if environment_information is not None:\n",
+    "    granule_id = get_test_granule_id(\n",
+    "        environment_information['env'], 'G1422449017-ASF', 'G1244144733-EEDTEST'\n",
+    "    )\n",
+    "\n",
+    "    uavsar_directory_eleven = 'uavsar_test_eleven'\n",
+    "\n",
+    "    uavsar_request_eleven = Request(\n",
+    "        collection=environment_information['uavsar_collection'],\n",
+    "        spatial=BBox(-145.75, 64.0, -145.70, 64.1),\n",
+    "        variables=['Band1'],\n",
+    "        format='application/x-netcdf4',\n",
+    "        granule_id=granule_id,\n",
+    "    )\n",
+    "\n",
+    "    uavsar_output_eleven = make_request_and_download_result(\n",
+    "        harmony_client,\n",
+    "        uavsar_request_eleven,\n",
+    "        uavsar_directory_eleven,\n",
+    "    )\n",
+    "\n",
+    "    # assert nc4_matches_reference_hash_file(\n",
+    "    #     uavsar_output_eleven[0], 'reference_images/uavsar_reference_eleven.nc4'\n",
+    "    # ), 'Test output does not match reference file, UAVSAR netCDF4 output'\n",
+    "    clean_test_artefacts(uavsar_directory_eleven)\n",
     "else:\n",
     "    print('Skipping test: HGA regression tests not configured for this environment.')"
    ]
