TRT-635: HGA test results downloaded to temporary directory.

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -78,8 +78,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime\n",
+    "from datetime import date, datetime\n",
+    "from os import makedirs\n",
     "from os.path import exists\n",
+    "from shutil import rmtree\n",
     "\n",
     "from earthdata_hashdiff import (\n",
     "    geotiff_matches_reference_hash_file,\n",
@@ -130,9 +132,7 @@
    "source": [
     "non_production_collections = {\n",
     "    'avnir_collection': Collection(id='C1244141281-EEDTEST'),\n",
-    "    'sentinel_collection': Collection(id='C1244141250-EEDTEST'),\n",
     "    'uavsar_collection': Collection(id='C1244141264-EEDTEST'),\n",
-    "    'mur_collection': Collection(id='C1238621141-POCLOUD'),\n",
     "}\n",
     "\n",
     "collection_data = {\n",
@@ -187,6 +187,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9677ab03-e27d-4ca2-8a7c-56b8046b938d",
+   "metadata": {},
+   "source": [
+    "## Create directory for test results:\n",
+    "\n",
+    "Format of this directory name will be `test_results_YYYY-mm-dd`. If this directory already exists, it will first be removed, to ensure that the contents only relate to the current run of the tests.\n",
+    "\n",
+    "This directory will be removed by the final cell of this notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cdd5ae3-f90d-444f-87e4-a357b31e2b61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_directory = f'test_results_{date.today().isoformat()}'\n",
+    "\n",
+    "if exists(results_directory):\n",
+    "    rmtree(results_directory)\n",
+    "\n",
+    "makedirs(results_directory)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "85ae985d",
    "metadata": {},
    "source": [
@@ -222,7 +249,7 @@
     "        labels=['hga-rtest', 'hga-rtest-avnir-one'],\n",
     "    )\n",
     "\n",
-    "    avnir_output_one_file_name = 'avnir_results_one.tif'\n",
+    "    avnir_output_one_file_name = '/'.join([results_directory, 'avnir_results_one.tif'])\n",
     "    submit_and_download(harmony_client, avnir_request_one, avnir_output_one_file_name)\n",
     "\n",
     "    assert exists(\n",
@@ -272,7 +299,7 @@
     "        labels=['hga-rtest', 'hga-rtest-avnir-two'],\n",
     "    )\n",
     "\n",
-    "    avnir_output_two_file_name = 'avnir_results_two.tif'\n",
+    "    avnir_output_two_file_name = '/'.join([results_directory, 'avnir_results_two.tif'])\n",
     "    submit_and_download(harmony_client, avnir_request_two, avnir_output_two_file_name)\n",
     "\n",
     "    assert exists(\n",
@@ -315,7 +342,7 @@
     "        environment_information['env'], 'G1835935580-ASF', 'G1244144598-EEDTEST'\n",
     "    )\n",
     "\n",
-    "    avnir_directory_three = 'avnir_test_three'\n",
+    "    avnir_directory_three = '/'.join([results_directory, 'avnir_test_three'])\n",
     "\n",
     "    avnir_request_three = Request(\n",
     "        collection=environment_information['avnir_collection'],\n",
@@ -380,7 +407,9 @@
     "        labels=['hga-rtest', 'hga-rtest-avnir-four'],\n",
     "    )\n",
     "\n",
-    "    avnir_output_four_file_name = 'avnir_results_four.tif'\n",
+    "    avnir_output_four_file_name = '/'.join(\n",
+    "        [results_directory, 'avnir_results_four.tif']\n",
+    "    )\n",
     "    submit_and_download(harmony_client, avnir_request_four, avnir_output_four_file_name)\n",
     "\n",
     "    assert exists(\n",
@@ -432,7 +461,9 @@
     "        labels=['hga-rtest', 'hga-rtest-avnir-five'],\n",
     "    )\n",
     "\n",
-    "    avnir_output_five_file_name = 'avnir_results_five.tif'\n",
+    "    avnir_output_five_file_name = '/'.join(\n",
+    "        [results_directory, 'avnir_results_five.tif']\n",
+    "    )\n",
     "    submit_and_download(harmony_client, avnir_request_five, avnir_output_five_file_name)\n",
     "\n",
     "    assert exists(\n",
@@ -486,7 +517,7 @@
     "        labels=['hga-rtest', 'hga-rtest-avnir-six'],\n",
     "    )\n",
     "\n",
-    "    avnir_output_six_file_name = 'avnir_results_six.tif'\n",
+    "    avnir_output_six_file_name = '/'.join([results_directory, 'avnir_results_six.tif'])\n",
     "    submit_and_download(harmony_client, avnir_request_six, avnir_output_six_file_name)\n",
     "\n",
     "    assert exists(\n",
@@ -540,7 +571,9 @@
     "        labels=['hga-rtest', 'hga-rtest-avnir-seven'],\n",
     "    )\n",
     "\n",
-    "    avnir_output_seven_file_name = 'avnir_results_seven.tif'\n",
+    "    avnir_output_seven_file_name = '/'.join(\n",
+    "        [results_directory, 'avnir_results_seven.tif']\n",
+    "    )\n",
     "    submit_and_download(\n",
     "        harmony_client, avnir_request_seven, avnir_output_seven_file_name\n",
     "    )\n",
@@ -593,7 +626,9 @@
     "        labels=['hga-rtest', 'hga-rtest-avnir-eight'],\n",
     "    )\n",
     "\n",
-    "    avnir_output_eight_file_name = 'avnir_results_eight.tif'\n",
+    "    avnir_output_eight_file_name = '/'.join(\n",
+    "        [results_directory, 'avnir_results_eight.tif']\n",
+    "    )\n",
     "    submit_and_download(\n",
     "        harmony_client, avnir_request_eight, avnir_output_eight_file_name\n",
     "    )\n",
@@ -640,7 +675,9 @@
     "        labels=['hga-rtest', 'hga-rtest-avnir-nine'],\n",
     "    )\n",
     "\n",
-    "    avnir_output_nine_file_name = 'avnir_results_nine.tif'\n",
+    "    avnir_output_nine_file_name = '/'.join(\n",
+    "        [results_directory, 'avnir_results_nine.tif']\n",
+    "    )\n",
     "    submit_and_download(harmony_client, avnir_request_nine, avnir_output_nine_file_name)\n",
     "\n",
     "    assert exists(\n",
@@ -689,7 +726,7 @@
     "        labels=['hga-rtest', 'hga-rtest-avnir-ten'],\n",
     "    )\n",
     "\n",
-    "    avnir_output_ten_file_name = 'avnir_results_ten.tif'\n",
+    "    avnir_output_ten_file_name = '/'.join([results_directory, 'avnir_results_ten.tif'])\n",
     "    submit_and_download(harmony_client, avnir_request_ten, avnir_output_ten_file_name)\n",
     "\n",
     "    assert exists(\n",
@@ -715,9 +752,7 @@
     "\n",
     "This test case combines a bounding box spatial subset across the Equator with a variable subset for bands 1 and 2. A netCDF4 output format is specified.\n",
     "\n",
-    "The input `.zip` file contains 4 Image GeoTIFFs, one per band each representing a spectrum range. In this test, we are retrieving 2 output bands.\n",
-    "\n",
-    "**Note: earthdata-hashdiff comparison is disabled because it requires Python 3.11, and that is incompatible with the version of GDAL used for GeoTIFF comparisons. This test is retained to ensure the request runs without error.**"
+    "The input `.zip` file contains 4 Image GeoTIFFs, one per band each representing a spectrum range. In this test, we are retrieving 2 output bands."
    ]
   },
   {
@@ -740,7 +775,9 @@
     "        labels=['hga-rtest', 'hga-rtest-avnir-eleven'],\n",
     "    )\n",
     "\n",
-    "    avnir_output_eleven_file_name = 'avnir_results_eleven.tif'\n",
+    "    avnir_output_eleven_file_name = '/'.join(\n",
+    "        [results_directory, 'avnir_results_eleven.tif']\n",
+    "    )\n",
     "    submit_and_download(\n",
     "        harmony_client, avnir_request_eleven, avnir_output_eleven_file_name\n",
     "    )\n",
@@ -797,7 +834,9 @@
     "        labels=['hga-rtest', 'hga-rtest-uavsar-one'],\n",
     "    )\n",
     "\n",
-    "    uavsar_output_one_file_name = 'uavsar_results_one.tif'\n",
+    "    uavsar_output_one_file_name = '/'.join(\n",
+    "        [results_directory, 'uavsar_results_one.tif']\n",
+    "    )\n",
     "    submit_and_download(harmony_client, uavsar_request_one, uavsar_output_one_file_name)\n",
     "\n",
     "    assert exists(\n",
@@ -845,7 +884,9 @@
     "        labels=['hga-rtest', 'hga-rtest-uavsar-two'],\n",
     "    )\n",
     "\n",
-    "    uavsar_output_two_file_name = 'uavsar_results_two.tif'\n",
+    "    uavsar_output_two_file_name = '/'.join(\n",
+    "        [results_directory, 'uavsar_results_two.tif']\n",
+    "    )\n",
     "    submit_and_download(harmony_client, uavsar_request_two, uavsar_output_two_file_name)\n",
     "\n",
     "    assert exists(\n",
@@ -895,7 +936,9 @@
     "        labels=['hga-rtest', 'hga-rtest-uavsar-three'],\n",
     "    )\n",
     "\n",
-    "    uavsar_output_three_file_name = 'uavsar_results_three.tif'\n",
+    "    uavsar_output_three_file_name = '/'.join(\n",
+    "        [results_directory, 'uavsar_results_three.tif']\n",
+    "    )\n",
     "    submit_and_download(\n",
     "        harmony_client, uavsar_request_three, uavsar_output_three_file_name\n",
     "    )\n",
@@ -947,7 +990,9 @@
     "        labels=['hga-rtest', 'hga-rtest-uavsar-four'],\n",
     "    )\n",
     "\n",
-    "    uavsar_output_four_file_name = 'uavsar_results_four.tif'\n",
+    "    uavsar_output_four_file_name = '/'.join(\n",
+    "        [results_directory, 'uavsar_results_four.tif']\n",
+    "    )\n",
     "    submit_and_download(\n",
     "        harmony_client, uavsar_request_four, uavsar_output_four_file_name\n",
     "    )\n",
@@ -1000,7 +1045,9 @@
     "        labels=['hga-rtest', 'hga-rtest-uavsar-five'],\n",
     "    )\n",
     "\n",
-    "    uavsar_output_five_file_name = 'uavsar_results_five.tif'\n",
+    "    uavsar_output_five_file_name = '/'.join(\n",
+    "        [results_directory, 'uavsar_results_five.tif']\n",
+    "    )\n",
     "    submit_and_download(\n",
     "        harmony_client, uavsar_request_five, uavsar_output_five_file_name\n",
     "    )\n",
@@ -1052,7 +1099,9 @@
     "        labels=['hga-rtest', 'hga-rtest-uavsar-six'],\n",
     "    )\n",
     "\n",
-    "    uavsar_output_six_file_name = 'uavsar_results_six.tif'\n",
+    "    uavsar_output_six_file_name = '/'.join(\n",
+    "        [results_directory, 'uavsar_results_six.tif']\n",
+    "    )\n",
     "    submit_and_download(harmony_client, uavsar_request_six, uavsar_output_six_file_name)\n",
     "\n",
     "    assert exists(\n",
@@ -1102,7 +1151,9 @@
     "        labels=['hga-rtest', 'hga-rtest-uavsar-seven'],\n",
     "    )\n",
     "\n",
-    "    uavsar_output_seven_file_name = 'uavsar_results_seven.tif'\n",
+    "    uavsar_output_seven_file_name = '/'.join(\n",
+    "        [results_directory, 'uavsar_results_seven.tif']\n",
+    "    )\n",
     "    submit_and_download(\n",
     "        harmony_client, uavsar_request_seven, uavsar_output_seven_file_name\n",
     "    )\n",
@@ -1154,7 +1205,9 @@
     "        labels=['hga-rtest', 'hga-rtest-uavsar-eight'],\n",
     "    )\n",
     "\n",
-    "    uavsar_output_eight_file_name = 'uavsar_results_eight.tif'\n",
+    "    uavsar_output_eight_file_name = '/'.join(\n",
+    "        [results_directory, 'uavsar_results_eight.tif']\n",
+    "    )\n",
     "    submit_and_download(\n",
     "        harmony_client, uavsar_request_eight, uavsar_output_eight_file_name\n",
     "    )\n",
@@ -1205,7 +1258,9 @@
     "        labels=['hga-rtest', 'hga-rtest-uavsar-nine'],\n",
     "    )\n",
     "\n",
-    "    uavsar_output_nine_file_name = 'uavsar_results_nine.tif'\n",
+    "    uavsar_output_nine_file_name = '/'.join(\n",
+    "        [results_directory, 'uavsar_results_nine.tif']\n",
+    "    )\n",
     "    submit_and_download(\n",
     "        harmony_client, uavsar_request_nine, uavsar_output_nine_file_name\n",
     "    )\n",
@@ -1248,8 +1303,6 @@
     "        environment_information['env'], 'G1422449017-ASF', 'G1244144733-EEDTEST'\n",
     "    )\n",
     "\n",
-    "    uavsar_directory_ten = 'uavsar_test_ten'\n",
-    "\n",
     "    uavsar_request_ten = Request(\n",
     "        collection=environment_information['uavsar_collection'],\n",
     "        spatial=BBox(-145.75, 64.0, -145.70, 64.1),\n",
@@ -1258,7 +1311,9 @@
     "        labels=['hga-rtest', 'hga-rtest-uavsar-ten'],\n",
     "    )\n",
     "\n",
-    "    uavsar_output_ten_file_name = 'uavsar_results_ten.tif'\n",
+    "    uavsar_output_ten_file_name = '/'.join(\n",
+    "        [results_directory, 'uavsar_results_ten.tif']\n",
+    "    )\n",
     "    submit_and_download(harmony_client, uavsar_request_ten, uavsar_output_ten_file_name)\n",
     "\n",
     "    assert exists(\n",
@@ -1282,9 +1337,7 @@
    "source": [
     "### UAVSAR test case 11:\n",
     "\n",
-    "This test case combines a bounding box spatial subset across the Equator with a variable subset for bands 1 and 2. A netCDF4 output format is specified.\n",
-    "\n",
-    "**Note: earthdata-hashdiff comparison is disabled because it requires Python 3.11, and that is incompatible with the version of GDAL used for GeoTIFF comparisons. This test is retained to ensure the request runs without error.**"
+    "This test case combines a bounding box spatial subset across the Equator with a variable subset for bands 1 and 2. A netCDF4 output format is specified."
    ]
   },
   {
@@ -1308,7 +1361,9 @@
     "        labels=['hga-rtest', 'hga-rtest-uavsar-eleven'],\n",
     "    )\n",
     "\n",
-    "    uavsar_output_eleven_file_name = 'uavsar_results_eleven.nc'\n",
+    "    uavsar_output_eleven_file_name = '/'.join(\n",
+    "        [results_directory, 'uavsar_results_eleven.nc']\n",
+    "    )\n",
     "    submit_and_download(\n",
     "        harmony_client, uavsar_request_eleven, uavsar_output_eleven_file_name\n",
     "    )\n",
@@ -1324,6 +1379,24 @@
     "    print_success('HGA UAVSAR (GeoTIFF input) netCDF4 format request.')\n",
     "else:\n",
     "    print('Skipping test: HGA regression tests not configured for this environment.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e56386d4-6420-439c-8a3a-6dc67909df13",
+   "metadata": {},
+   "source": [
+    "## Clean up test results directory:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "897c55c8-3f0b-4a0e-bede-d64e39523a28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rmtree(results_directory)"
    ]
   }
  ],
