DAS-2382: Update Reference for implicit grid test
Bumps versions of regridder libs.

--- a/test/regridder/Regridder_Regression.ipynb
+++ b/test/regridder/Regridder_Regression.ipynb
@@ -367,7 +367,7 @@
     "            labels=[\"hrs-rtest\", \"hrs-rtest-4\"],\n",
     "        )\n",
     "\n",
-    "        spl3ftp_test_output = temp_dir / Path(\"SPL3FTP_test.nc\")\n",
+    "        spl3ftp_test_output = temp_dir / Path(\"SPL3FTP_test.nc4\")\n",
     "        spl3ftp_test_reference = Path(\"reference_data/SPL3FTP_test_reference.json\")\n",
     "\n",
     "        submit_and_download(harmony_client, spl3ftp_request, spl3ftp_test_output)\n",
