DAS-2382: Fix merra file extension

--- a/test/regridder/Regridder_Regression.ipynb
+++ b/test/regridder/Regridder_Regression.ipynb
@@ -202,7 +202,7 @@
     "            labels=[\"hrs-rtest\", \"hrs-rtest-1\"],\n",
     "        )\n",
     "\n",
-    "        merra2_test_output = temp_dir / Path(\"MERRA2_test.nc\")\n",
+    "        merra2_test_output = temp_dir / Path(\"MERRA2_test.nc4\")\n",
     "        merra2_test_reference = Path(\n",
     "            \"reference_data/MERRA2_400.tavg1_2d_slv_Nx.20210605_regridded.json\"\n",
     "        )\n",
