DAS-2382  implicit grids include entire grid cell area  (#217)

--- a/test/regridder/Regridder_Regression.ipynb
+++ b/test/regridder/Regridder_Regression.ipynb
@@ -199,9 +199,10 @@
     "            crs=\"+proj=latlong +datum=WGS84 +no_defs\",\n",
     "            height=72,\n",
     "            width=144,\n",
+    "            labels=[\"hrs-rtest\", \"hrs-rtest-1\"],\n",
     "        )\n",
     "\n",
-    "        merra2_test_output = temp_dir / Path(\"MERRA2_test.h5\")\n",
+    "        merra2_test_output = temp_dir / Path(\"MERRA2_test.nc4\")\n",
     "        merra2_test_reference = Path(\n",
     "            \"reference_data/MERRA2_400.tavg1_2d_slv_Nx.20210605_regridded.json\"\n",
     "        )\n",
@@ -246,34 +247,35 @@
     "if environment_information is not None:\n",
     "    with TemporaryDirectory() as temp_dir:\n",
     "        atl16_request = Request(\n",
-    "            collection=environment_information['atl16_collection'],\n",
-    "            granule_id=environment_information['atl16_granules'][0],\n",
-    "            interpolation='Elliptical Weighted Averaging',\n",
+    "            collection=environment_information[\"atl16_collection\"],\n",
+    "            granule_id=environment_information[\"atl16_granules\"][0],\n",
+    "            interpolation=\"Elliptical Weighted Averaging\",\n",
     "            scale_size=(5.0, 5.0),\n",
     "            scale_extent=(-180, -90, 180, 90),\n",
-    "            crs='EPSG:4326',\n",
+    "            crs=\"EPSG:4326\",\n",
     "            height=36,\n",
     "            width=72,\n",
+    "            labels=[\"hrs-rtest\", \"hrs-rtest-2\"],\n",
     "        )\n",
     "\n",
     "        atl16_test_output = temp_dir / Path(\"ATL16_test.h5\")\n",
     "        atl16_test_reference = Path(\n",
-    "            'reference_data/ATL16_20200308000030_11040601_004_01_regridded.json'\n",
+    "            \"reference_data/ATL16_20200308000030_11040601_004_01_regridded.json\"\n",
     "        )\n",
     "\n",
     "        submit_and_download(harmony_client, atl16_request, atl16_test_output)\n",
     "\n",
-    "        assert atl16_test_output.exists(), 'Unsuccessful Harmony Request: ATL16'\n",
+    "        assert atl16_test_output.exists(), \"Unsuccessful Harmony Request: ATL16\"\n",
     "\n",
     "        assert h5_matches_reference_hash_file(\n",
     "            atl16_test_output,\n",
     "            atl16_test_reference,\n",
     "        ), \"Request output did not match reference file: ATL16\"\n",
     "\n",
-    "    print_success('Regrid ATL16 Data Success')\n",
+    "    print_success(\"Regrid ATL16 Data Success\")\n",
     "else:\n",
     "    print(\n",
-    "        'Skipping test: regridder regression tests not configured for this environment.'\n",
+    "        \"Skipping test: regridder regression tests not configured for this environment.\"\n",
     "    )"
    ]
   },
@@ -299,32 +301,33 @@
     "if environment_information is not None:\n",
     "    with TemporaryDirectory() as temp_dir:\n",
     "        spl4mau_request = Request(\n",
-    "            collection=environment_information['spl4smau_collection'],\n",
-    "            granule_id=environment_information['spl4smau_granules'][0],\n",
-    "            interpolation='Elliptical Weighted Averaging',\n",
+    "            collection=environment_information[\"spl4smau_collection\"],\n",
+    "            granule_id=environment_information[\"spl4smau_granules\"][0],\n",
+    "            interpolation=\"Elliptical Weighted Averaging\",\n",
     "            scale_size=(7.0, 7.0),\n",
     "            scale_extent=(-180, -90, 180, 90),\n",
-    "            crs='EPSG:4326',\n",
+    "            crs=\"EPSG:4326\",\n",
+    "            labels=[\"hrs-rtest\", \"hrs-rtest-3\"],\n",
     "        )\n",
     "\n",
     "        spl4mau_test_output = temp_dir / Path(\"SPL4SMAU_test.h5\")\n",
-    "        spl4mau_test_reference = Path('reference_data/SPL4SMAU_test_reference.json')\n",
+    "        spl4mau_test_reference = Path(\"reference_data/SPL4SMAU_test_reference.json\")\n",
     "\n",
     "        submit_and_download(harmony_client, spl4mau_request, spl4mau_test_output)\n",
     "\n",
     "        assert (\n",
     "            spl4mau_test_output.exists()\n",
-    "        ), 'Unsuccessful Harmony Request: SPL4MAU (projected dimensions)'\n",
+    "        ), \"Unsuccessful Harmony Request: SPL4MAU (projected dimensions)\"\n",
     "\n",
     "        assert h5_matches_reference_hash_file(\n",
     "            spl4mau_test_output,\n",
     "            spl4mau_test_reference,\n",
     "        ), \"Request output did not match reference file: SPL4SMAU\"\n",
     "\n",
-    "    print_success('Regrid SPL4MAU Data Success')\n",
+    "    print_success(\"Regrid SPL4MAU Data Success\")\n",
     "else:\n",
     "    print(\n",
-    "        'Skipping test: regridder regression tests not configured for this environment.'\n",
+    "        \"Skipping test: regridder regression tests not configured for this environment.\"\n",
     "    )"
    ]
   },
@@ -350,10 +353,10 @@
     "if environment_information is not None:\n",
     "    with TemporaryDirectory() as temp_dir:\n",
     "        spl3ftp_request = Request(\n",
-    "            collection=environment_information['spl3ftp_collection'],\n",
-    "            granule_id=environment_information['spl3ftp_granules'][0],\n",
-    "            interpolation='Elliptical Weighted Averaging',\n",
-    "            crs='EPSG:4326',\n",
+    "            collection=environment_information[\"spl3ftp_collection\"],\n",
+    "            granule_id=environment_information[\"spl3ftp_granules\"][0],\n",
+    "            interpolation=\"Elliptical Weighted Averaging\",\n",
+    "            crs=\"EPSG:4326\",\n",
     "            variables=[\n",
     "                \"Freeze_Thaw_Retrieval_Data_Global/altitude_dem\",\n",
     "                \"Freeze_Thaw_Retrieval_Data_Global/freeze_reference\",\n",
@@ -361,26 +364,27 @@
     "                \"Freeze_Thaw_Retrieval_Data_Polar/freeze_reference\",\n",
     "            ],\n",
     "            spatial=BBox(w=-70, s=60, e=-10, n=85),\n",
+    "            labels=[\"hrs-rtest\", \"hrs-rtest-4\"],\n",
     "        )\n",
     "\n",
-    "        spl3ftp_test_output = temp_dir / Path(\"SPL3FTP_test.h5\")\n",
-    "        spl3ftp_test_reference = Path('reference_data/SPL3FTP_test_reference.json')\n",
+    "        spl3ftp_test_output = temp_dir / Path(\"SPL3FTP_test.nc4\")\n",
+    "        spl3ftp_test_reference = Path(\"reference_data/SPL3FTP_test_reference.json\")\n",
     "\n",
     "        submit_and_download(harmony_client, spl3ftp_request, spl3ftp_test_output)\n",
     "\n",
     "        assert (\n",
     "            spl3ftp_test_output.exists()\n",
-    "        ), 'Unsuccessful Harmony Request: SPL3FTP (Implicit Grids)'\n",
+    "        ), \"Unsuccessful Harmony Request: SPL3FTP (Implicit Grids)\"\n",
     "\n",
     "        assert h5_matches_reference_hash_file(\n",
     "            spl3ftp_test_output,\n",
     "            spl3ftp_test_reference,\n",
     "        ), \"Request output did not match reference file: SPL3FTP (Implicit Grids)\"\n",
     "\n",
-    "    print_success('Regrid SPL3FTP Data Success')\n",
+    "    print_success(\"Regrid SPL3FTP Data Success\")\n",
     "else:\n",
     "    print(\n",
-    "        'Skipping test: regridder regression tests not configured for this environment.'\n",
+    "        \"Skipping test: regridder regression tests not configured for this environment.\"\n",
     "    )"
    ]
   }
